# LCGP

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  Phi_seed0.txt  README.md  binary_missingness.bib  epoch_mse.txt  lcgp-bandsdk.md  negelbo_cg_retainFalse  negelbo_cg_retainTrue  noisy2d_chi2.csv  pyproject.toml  rel_testmse.txt  requirements.txt  setup.cfg  setup.py  time_full.txt  time_ip.txt  time_ip_100.txt  time_ip_400.txt  time_ip_50.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: ci.yml  install_tox.sh  package.yml  publish.yml  ruff.yaml
code/: .RData  .Rhistory  binary_missingness.Rmd  binary_missingness.html  binary_test_LR.py  ftrain.txt  testbed_mvbinary.py  theta.txt  thetatrain.txt
code/gpVIIP/: VIGP.ipynb  __init__torchoptim.py  debug_cov_sp_simplified.py  debug_kmeans_ip_accuracy.py  gen_borehole_data.py  gen_exp.py  gen_func_data.py  hyperparameter_tuning.py  kmeans_read.py  lbfgs.py  lcgp.py  lcgp_old.py  likelihood.py  matern_covmat.py  mvn_elbo_autolatent_model.py  mvn_elbo_autolatent_model_jit.py  mvn_elbo_autolatent_sp_model.py  mvn_elbo_autolatent_sp_model_jit.py  optim.py  optim_elbo.py  optim_elbo_trace_comp_graph.py  prediction.py  read_comparison_result.py  read_time.py  scores.py  slurm_testborehole.py  slurm_testgenfunc.py  submit_testbh.sh  submit_testgeneral.sh  test_all.py  test_colin.py  test_general.py  test_gp.py  test_mvlatent_fixG_with_ind_nnBasis.py  test_mvn_elbo.py  test_simple.py  test_surmise_Phi.py
code/gpbinary/: basis_nn_model.py  clamping_lmb.py  debug_cov_sp_simplified.py  fayans_support.py  gp_mvlatent_model.py  gpbinary_lrmodel.py  gpbinary_model.py  gram_schmidt.py  hyperparameter_tuning.py  kmeans_read.py  kmeans_test.py  likelihood.py  matern_covmat.py  mvn_elbo_autoMuV_model.py  mvn_elbo_autolatent_model.py  mvn_elbo_autolatent_sp_model.py  mvn_elbo_autolatent_sp_model_jit.py  mvn_elbo_model.py  optim_basis_Phi.py  optim_elbo.py  optim_rules.py  prediction.py  read_comparison_result.py  read_mvlatent_summary_results.py  read_mvn_elbo_results.py  test_all.py  test_all_fayans.py  test_borehole_full.py  test_borehole_sp.py  test_function.py  test_gp.py  test_mainframe.py  test_mvlatent.py  test_mvlatent_Phi_param.py  test_mvlatent_fixG.py  (+12 more)
debug/: call_model.py  plot_debug_rep.py  run_debug_rep.py
docs/: Makefile  conf.py  functions.py  index.rst  modules.rst  readme.rst  replications-illustration.ipynb  requirements.txt
experiments/: run_experiments.py  testfunc_wrapper.py
illustration-examples/: call_model.py  gppca.py  illustration-instruction.md  lcgp-3d-illustration.py  lcgp-3d-tf.py  lcgp-3d.py  lcgp-rep-1d-illustration.ipynb  lcgp-rep-3d-illustration.py  lcgp-rep-illustration.py  quick-start.ipynb  replications-illustration-as-script.ipynb  replications-illustration-full-run.ipynb  replications-illustration.ipynb
lcgp/: __init__.py  _import_util.py  _version.py  covmat.py  evaluation.py  hyperparameter_tuning.py  lcgp.py  lcgp_rep.py  optim.py
literature/: bookmarks_6_16_22.html
numerical_test/: benchmark_runner.py  metrics.py  plotting.py  run_benchmark.py
real-data-example/: vah_example.py  vah_plot.py
reference_code/: LBFGS.py
src/: __init__.py  hyperparameter_tuning.py  lcgp.py  optim.py
submethod-illustration/: lcgp-submethod-illustration.py
tests/: func3d.py  functions.py  test_lcgp.py
(+565 files in other folders)
