[metadata]
name = lcgp
author = Moses Chan
author_email = mosesyhc@u.northwestern.edu
description = Latent component Gaussian process
url = https://github.com/mosesyhc/lcgp
license = MIT
license_files = file: LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown